feat: swagger polizze & fondi
